--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "date-fns": "^3.3.1",
     "dotenv": "^16.3.2",
+    "fast-csv": "^5.0.0",
     "node-cron": "^3.0.3",
     "telegraf": "^4.15.3"
   }
